Add coffees and coffee_catagories module
