# src/routes/coffeeRoutes.js
@@ -1,7 +1,17 @@
 const express = require("express");
 const router = express.Router();
 
-const { addCoffee } = require("../controllers/coffeesController");
+const {
+  addCoffee,
+  getAllCoffees,
+  getCoffeeById,
+  updateCoffeeById,
+  DeleteCoffeeById,
+} = require("../controllers/coffeesController");
 router.post("/add", addCoffee);
+router.get("/allcoffee", getAllCoffees);
+router.get("/:id", getCoffeeById);
+router.put("/:id", updateCoffeeById);
+router.delete("/:id", DeleteCoffeeById);
 
 module.exports = router;
